remove permutation